provisioning/200_apps/base/webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  ports:
  - protocol: TCP
    name: web
    port: 80
    # whoami is listening on 8080 from --port argument so that non-root user
    # can run container as needs to bind to ports higher than 1024
    targetPort: 80
  selector:
    app: webserver
