provisioning/200_apps/base/webserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: op-keycloak-traefik-forward-auth@kubernetescrd

spec:
  rules:
  - host: << example.com >>
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: webserver-svc
            port:
              number: 80

  tls:
  - hosts:
    - << example.com >>
    secretName: << example.com >>
